force-app/main/default/objects/ResponsibleManager__c/ResponsibleManager__c.object-meta.xml
<CustomObject>
    <label>Responsible Manager</label>
    <nameField>
        <displayFormat>RM-{000}</displayFormat>
        <label>Responsible Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responsible Managers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>