force-app/main/default/objects/ResponsibleManager__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Responsible Managers</relationshipLabel>
    <relationshipName>Responsible_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>