force-app/main/default/objects/ResponsibleManager__c/fields/Gridding__c.field-meta.xml
<CustomField>
    <fullName>Gridding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gridding</label>
    <referenceTo>Gridding__c</referenceTo>
    <relationshipLabel>Responsible Managers</relationshipLabel>
    <relationshipName>Responsible_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>