force-app/main/default/objects/ResponsibleManager__c/fields/ResponsiblePerson__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResponsibleManagers</relationshipName>
    <type>Lookup</type>
</CustomField>