force-app/main/default/objects/ResponsibleManager__c/fields/ResponsiblePersonEmail__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePersonEmail__c</fullName>
    <formula>ResponsiblePerson__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible Person Email</label>
    <type>Text</type>
</CustomField>