force-app/main/default/objects/ResponsibleManager__c/recordTypes/Grid.recordType-meta.xml
<RecordType>
    <fullName>Grid</fullName>
    <active>true</active>
    <label>Grid</label>
</RecordType>